--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildIndex.1.html
@@ -99,7 +99,7 @@
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
           </p>
           <hr/>
-          <h3>Swift 5.9</h3>
+          <h3>Swift 5.10 (beta)</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -292,7 +292,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.8</h3>
+          <h3>Swift 5.9</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -375,6 +375,33 @@
                 </div>
                 <div>
                   <span>Queued</span>
+                </div>
+              </div>
+            </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>visionOS</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
@@ -461,7 +488,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.7</h3>
+          <h3>Swift 5.8</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -627,7 +654,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.6</h3>
+          <h3>Swift 5.7</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
