--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
@@ -183,16 +183,18 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>5.10
+                          <small>(beta)</small>
+                        </div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
-                        <div>5.6</div>
                       </div>
                       <div class="results">
-                        <div class="compatible" title="Built successfully with Swift 5.9"></div>
-                        <div class="unknown" title="No build information available for Swift 5.8"></div>
+                        <div class="compatible" title="Built successfully with Swift 5.10"></div>
+                        <div class="unknown" title="No build information available for Swift 5.9"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.8"></div>
                         <div class="incompatible" title="Build failed with Swift 5.7"></div>
-                        <div class="incompatible" title="Build failed with Swift 5.6"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -202,16 +204,18 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>5.10
+                          <small>(beta)</small>
+                        </div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
-                        <div>5.6</div>
                       </div>
                       <div class="results">
+                        <div class="compatible" title="Built successfully with Swift 5.10"></div>
                         <div class="compatible" title="Built successfully with Swift 5.9"></div>
                         <div class="compatible" title="Built successfully with Swift 5.8"></div>
-                        <div class="compatible" title="Built successfully with Swift 5.7"></div>
-                        <div class="incompatible" title="Build failed with Swift 5.6"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.7"></div>
                       </div>
                     </li>
                   </ul>
