--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -83,16 +83,16 @@
     <main>
       <div class="inner">
         <h2>Ready for Swift 6</h2>
-        <p>The Swift 6 language mode prevents data-races at compile time. When you opt into Swift 6 mode, the compiler will produce errors when your code has a risk of concurrent access, turning hard-to-debug runtime failures into compiler errors.</p>
+        <p>The Swift 6 language mode prevents data races at compile time. When you opt into Swift 6 mode, the compiler will produce errors when your code has a risk of concurrent access, turning hard-to-debug runtime failures into compiler errors.</p>
         <p>To track the progress of the Swift package ecosystem, the Swift Package Index is running regular package compatibility checks across all packages in the index.</p>
         <p>For help migrating your project's code, see the 
           <a href="https://www.swift.org/migration/documentation/migrationguide/">Swift 6 language mode migration guide</a>.
         </p>
-        <h3 id="total-zero-errors">Total packages with Swift 6 zero data-race safety errors</h3>
-        <p>Packages with zero data-race safety compiler diagnostics during a successful build on at least one tested platform.</p>
+        <h3 id="total-zero-errors">Total packages with Swift 6 zero data race safety errors</h3>
+        <p>This chart shows packages with zero data race safety compiler diagnostics during a successful build on at least one tested platform.</p>
         <p>Couldn’t load chart data.</p>
-        <h3 id="total-errors">Total Swift 6 data-race safety errors</h3>
-        <p>The total number of all data-race safety diagnostics across 
+        <h3 id="total-errors">Total Swift 6 data race safety errors</h3>
+        <p>This chart shows the total number of all data race safety diagnostics across 
           <em>all</em> packages.
         </p>
         <p>Couldn’t load chart data.</p>
@@ -101,7 +101,7 @@
           <strong>Q: </strong>What is a “data race safety error”?
         </p>
         <p>
-          <strong>A: </strong>Swift 6 introduces complete concurrency checking, a compiler feature that checks your code for data-race safety. The number of data race safety errors reflects how many issues the compiler detected relating to these concurrency or data-race checks. The total errors chart plots the total number of these errors summed across all packages.
+          <strong>A: </strong>Swift 6 introduces complete concurrency checking, a compiler feature that checks your code for data race safety. The number of data race safety errors reflects how many issues the compiler detected relating to these concurrency or data race checks. The total errors chart plots the total number of these errors summed across all packages.
         </p>
         <hr class="minor"/>
         <p>
@@ -115,12 +115,20 @@
         </p>
         <hr class="minor"/>
         <p>
+          <strong>Q: </strong>Are packages that show zero data race compiler diagnostics guaranteed to be safe from data race errors?
+        </p>
+        <p>
+          <strong>A: </strong>No. We gather data on data race safety from Swift compiler diagnostics with “complete” concurrency checks enabled. We can’t tell if the diagnostics produce zero errors due to a genuine lack of data race safety errors or whether errors have been suppressed using techniques like 
+          <code>@unchecked Sendable</code>.
+        </p>
+        <hr class="minor"/>
+        <p>
           <strong>Q: </strong>Why use 
           <code>-strict-concurrency=complete</code> instead of 
           <code>-swift-version 6</code>?
         </p>
         <p>
-          <strong>A: </strong>Data-race safety diagnostics are determined in different stages of the compiler. For example, type checking produces some data-race safety errors, and others are diagnosed during control-flow analysis after code generation. If type checking produces errors, the compiler will not proceed to code generation, so testing with 
+          <strong>A: </strong>Data race safety diagnostics are determined in different stages of the compiler. For example, type checking produces some data race safety errors, and others are diagnosed during control-flow analysis after code generation. If type checking produces errors, the compiler will not proceed to code generation, so testing with 
           <code>-swift-version 6</code> would show fewer errors than really exist across the package ecosystem.
         </p>
         <hr class="minor"/>
