Removed `fixReadmeAnchors` in preparation for this code to be run in Swift.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
@@ -363,7 +363,7 @@
             </ul>
           </nav>
           <section data-tab-bar-target="content">
-            <turbo-frame id="readme_content" src="/Alamo/Alamofire/readme" data-controller="readme" data-action="turbo:frame-load->readme#fixReadmeAnchors turbo:frame-load->readme#navigateToAnchorFromLocation">
+            <turbo-frame id="readme_content" src="/Alamo/Alamofire/readme" data-controller="readme" data-action="turbo:frame-load->readme#navigateToAnchorFromLocation">
               <div>
                 <div class="spinner">
                   <div class="rect1"></div>
