--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintenanceMessageIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintenanceMessageIndexView.1.html
@@ -67,7 +67,7 @@
       <a href="/ready-for-swift-6">Ready for Swift 6</a>?
     </p>
     <main>
-      <div class="inner"><h1>⚠️ Server Maintenance ⚠️</h1><p>We are currently performing an update to our database server.</p><p>Service should be restored within a few minutes.</p></div>
+      <div class="inner"><h1>Server Maintenance</h1><p>We are currently performing an update to our database server.</p><p>Service should be restored within a few minutes.</p></div>
     </main>
     <footer>
       <div class="inner">
